src/main/java/com/example/mybookshopapp/errors/ApiWrongParameterException.java
package com.example.mybookshopapp.errors;

public class ApiWrongParameterException extends Exception{
    public ApiWrongParameterException(String message) {
        super(message);
    }
}
